Proto-02/kube/save-apple.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  labels:
    app: apple
    service: apple-service
spec:
  ports:
    - name: http
      port: 5678
  selector:
    app: apple

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      serviceAccountName: apple
      containers:
      - name: apple
        image: hashicorp/http-echo
        imagePullPolicy: IfNotPresent
        args:
          - "-text=apple service has been invoked"
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
