Proto-02/kube/save-apple-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apple-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apple
spec:
  parentRefs:
  - name: apple-gateway
  hostnames:
  - "apple.foo.com"
  rules:
  - matches:
    - path:
        type: Exact
        value: /apple
  - backendRefs:
    - name: apple-service
      port: 5678
